@@ -13,11 +13,12 @@ isa-ok $o, Date::Event;
 
 is $o.etype, "Unknown", "default Etype: Unknown";
 is $o.etype(200), "Other", "name of a given EType number 200";
+is $o.etype(150), "Astro", "name of a given EType number 200";
 
 my $m = EType.enums;
 isa-ok $m, Map;
 is $m<Unknown>, 0, "created an enums map";
-is $m.elems, 14, "there are 14 enums as expected";
+is $m.elems, 15, "there are 15 enums as expected";
 is $m<Holiday>, 100, "value 100 is a Holiday event";
 
 is $o.etype, "Unknown";
