@@ -1,6 +1,10 @@
 Revision history for Date-Event
 
 {{$NEXT}}
+    - Add 'Astro' enum with value 150
+    - Add lat/lon attributes
+    - Add methods to set/read lat/lon
+    - Add tests for above
 
 0.0.9  2024-02-07T06:08:18-06:00
     - Remove API 2 designation, tests, and docs--not useful
